# titan

./: .gitignore  Cargo.toml  README.md  STATUS.md  clippy.toml  refactor_plan.md
.github/workflows/: nightly-baseline.yml  rust.yml  weekly-kpi.yml
bedrock/: Cargo.toml
bedrock/src/: arc_buffer_pool.rs  btree.rs  buffer_pool.rs  failpoint.rs  lib.rs  lock_manager.rs  page.rs  pager.rs  transaction.rs  wal.rs
docs/: refactor_checklist.md  refactor_smoke.md
scripts/: baseline-check.ps1  benchmark-thresholds.baseline-ratio.json  benchmark-thresholds.titan.smoke.json  check-baseline-ratios.ps1  check-benchmark-thresholds.ps1  panic-inventory.ps1  run-baseline-benchmark.ps1  run-tests-with-timeout.ps1  weekly-kpi.ps1
titan_bin/: Cargo.toml  idx_id.idx
titan_bin/benches/: simple_benchmark.rs
titan_bin/src/: aggregate_executor.rs  catalog.rs  errors.rs  executor.rs  lib.rs  limit_executor.rs  main.rs  optimizer.rs  parser.rs  planner.rs  sql_extensions.rs  types.rs  window_executor.rs
titan_bin/src/executor/: ddl.rs  dml.rs  eval.rs  helpers.rs  join.rs  maintenance.rs  pipeline.rs  scan.rs
titan_bin/src/optimizer/: convert.rs  join_order.rs  model.rs  stats.rs
titan_bin/tests/: analyze_test.rs  btree_test.rs  concurrency_test.rs  crash_matrix_test.rs  integration_test.rs  mvcc_visibility_test.rs  optimizer_test.rs  recovery_restart_test.rs  test_aggregates.rs  vacuum_test.rs  wal_test.rs
titan_bin/tests/common/: mod.rs
