[package]
name = "titan_bin"
version = "0.1.0"
edition = "2025"

[dependencies]
bedrock = { path = "../bedrock" }
chumsky = "0.9.3"
bytes = "1.5.0"
chrono = "0.4"
rand = "0.8"

[dev-dependencies]
postgres = "0.19.7"
serial_test = "3.0.0"
tempfile = "3.10.1"

[[test]]
name = "vacuum_test"
path = "tests/vacuum_test.rs"

[[test]]
name = "optimizer_test"
path = "tests/optimizer_test.rs"
