[package]
name = "titan_bin"
version = "0.2.0"
edition = "2024"

[dependencies]
bedrock = { path = "../bedrock" }
chumsky = "0.9.3"
bytes = "1.5.0"
chrono = "0.4"
rand = "0.8"
postgres = "0.19.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10.1"

[dev-dependencies]
serial_test = "3.0.0"
criterion = "0.5"

[[test]]
name = "vacuum_test"
path = "tests/vacuum_test.rs"

[[test]]
name = "optimizer_test"
path = "tests/optimizer_test.rs"

[[bench]]
name = "simple_benchmark"
harness = false
